force-app/main/default/objects/ssot__GoalAssignmentDetail__dlm/fields/ssot__GoalAssignmentId__c.field-meta.xml
<CustomField>
    <fullName>ssot__GoalAssignmentId__c</fullName>
    <label>Goal Assignment</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GoalAssignmentId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>