force-app/main/default/objects/ssot__GoalAssignmentDetail__dlm/fields/ssot__rel_1734838463203_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1734838463203_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GoalAssignmentDetail_DetailCodeId_ma_rel</label>
    <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
    <relationshipLabel>GoalAssignmentDetail_DetailCodeId_ma_rel</relationshipLabel>
    <relationshipName>rel_1734838463203_end</relationshipName>
    <type>Lookup</type>
</CustomField>