force-app/main/default/objects/ssot__GoalAssignmentDetail__dlm/fields/ssot__rel_1734838515603_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1734838515603_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GoalAssignmentDetail_DetailRecordId__rel</label>
    <referenceTo>ssot__PatientMedicationStatement__dlm</referenceTo>
    <relationshipLabel>GoalAssignmentDetail_DetailRecordId__rel</relationshipLabel>
    <relationshipName>rel_1734838515603_end</relationshipName>
    <type>Lookup</type>
</CustomField>